Added alt texts to the images

--- a/code/index.html
+++ b/code/index.html
@@ -19,7 +19,7 @@
       </div>
       
       <div class="header-nav-wrapper">
-        <img class="header-hamburger" src="https://cdn.discordapp.com/attachments/797594258286051338/1136698868164198430/three-horizontal-lines-icon.png" alt="triple bars">
+        <img class="header-hamburger" src="https://cdn.discordapp.com/attachments/797594258286051338/1136698868164198430/three-horizontal-lines-icon.png" alt="Triple Bars">
         <ul class="header-nav-list">  
           <li><a class="header-nav-link home" href="link1">Home</a></li>
           <li><a class="header-nav-link about-us" href="link1">About</a></li>
@@ -32,7 +32,7 @@
       <div class="card first-news">
         <a href="link" class="card-link">
           <div class="card-body-first">
-            <img class="card-image-first" src="https://cdn.discordapp.com/attachments/797594258286051338/1137105387527602347/20230804_imageWebsiteCozy_cats.jpg">
+            <img class="card-image-first" src="https://cdn.discordapp.com/attachments/797594258286051338/1137105387527602347/20230804_imageWebsiteCozy_cats.jpg" alt="A cat getting petted">
             <div class="card-news-article">
               <h2 class="card-title">The Feline Fuzzball Effect: How Cats Enhance Our Well-Being</h2>
               <p class="card-description">For centuries, felines have woven their way into the hearts of humans, captivating us with their grace and charm. As it turns out, the love we shower upon these adorable furballs goes far beyond simple affection — it comes with a treasure trove of scientifically proven benefits that can enrich our lives in surprising ways. So, if you've ever wondered why being a cat lover feels so darn good, let's take a closer look at the science-backed reasons behind this delightful bond...</p>
@@ -44,7 +44,7 @@
       <div class="card second-news">
         <a href="link" class="card-link">
           <div class="card-body">
-            <img class="card-image-second" src="https://cdn.discordapp.com/attachments/797594258286051338/1137105388437782578/20230804_imageWebsiteCozy_ghibli.jpg">
+            <img class="card-image-second" src="https://cdn.discordapp.com/attachments/797594258286051338/1137105388437782578/20230804_imageWebsiteCozy_ghibli.jpg" alt="My neighbour Totoro">
             <h2 class="card-title">Enchanted Worlds: How Ghibli Movies Ignite the Flame of Imagination</h2>
             <p class="card-description">Ghibli movies are not just animated tales; they are gateways to worlds of inspiration and wonder. Their timeless stories and beautifully crafted animations inspire us to dream big, cherish our connections, and embrace the magic of life...</p>
         </div>
@@ -54,7 +54,7 @@
       <div class="card third-news">
         <a href="link" class="card-link">
           <div class="card-body">
-            <img class="card-image" src="https://cdn.discordapp.com/attachments/797594258286051338/1137105388882362448/20230804_imageWebsiteCozy_rain.jpg">
+            <img class="card-image" src="https://cdn.discordapp.com/attachments/797594258286051338/1137105388882362448/20230804_imageWebsiteCozy_rain.jpg" alt="Girl looking out of a window when it's raining">
             <h2 class="card-title">10 Cozy and Fun Activities to Embrace on a Rainy Day</h2>
             <p class="card-description">When the skies open up and raindrops dance on your windowpane, it's the perfect excuse to create a warm and inviting haven indoors. Rainy days can be the ultimate opportunity to slow down, relax, and indulge in some cozy and fun activities. So, let's get ready to embrace the rain and make the most of these delightful moments with ten cozy and enjoyable ideas for your rainy day adventures...
             </p>
@@ -65,7 +65,7 @@
       <div class="card fourth-news">
         <a href="link" class="card-link">
           <div class="card-body">
-            <img class="card-image" src="https://cdn.discordapp.com/attachments/797594258286051338/1137105389175976037/20230804_imageWebsiteCozy_yoga.jpg">
+            <img class="card-image" src="https://cdn.discordapp.com/attachments/797594258286051338/1137105389175976037/20230804_imageWebsiteCozy_yoga.jpg" alt="Girl doing  a yoga pose on a balcony">
             <h2 class="card-title">Embrace Your Inner Protagonist: The Art of Romanticizing Everyday Life</h2>
             <p class="card-description">In the grand narrative of life, each one of us holds the power to be the main character in our own unique story. But what does it mean to be the protagonist of your life and how can you infuse enchantment into everyday tasks? The secret lies in embracing the art of romanticizing your life — finding beauty and magic in the smallest of moments, and channeling your main-character energy to create a story that is truly your own...</p>
           </div>
@@ -75,7 +75,7 @@
       <div class="card fifth-news">
         <a href="link" class="card-link">
           <div class="card-body">
-            <img class="card-image" src="https://cdn.discordapp.com/attachments/797594258286051338/1137105387972210769/20230804_imageWebsiteCozy_games.jpg">
+            <img class="card-image" src="https://cdn.discordapp.com/attachments/797594258286051338/1137105387972210769/20230804_imageWebsiteCozy_games.jpg" alt="A Switch controller on a blanket">
             <h2 class="card-title">Cozy Escapes: Enchanting Games to Immerse Yourself in Atmospheric Realms</h2>
             <p class="card-description">In the midst of life's hustle and bustle, finding moments of serenity and relaxation is essential for our well-being. Enter cozy games, a delightful world of interactive experiences that offer not only entertainment but also provide an escape from the stresses of everyday life. Whether you're a seasoned gamer or new to the gaming scene, these 10 cozy games are your perfect companions for unwinding...</p>
           </div>
@@ -85,7 +85,7 @@
       <div class="card sixth-news">
         <a href="link" class="card-link">
           <div class="card-body">
-            <img class="card-image" src="https://cdn.discordapp.com/attachments/797594258286051338/1137105387141738626/20230804_imageWebsiteCozy_boba.jpg">
+            <img class="card-image" src="https://cdn.discordapp.com/attachments/797594258286051338/1137105387141738626/20230804_imageWebsiteCozy_boba.jpg" alt="Two glasses with boba tea">
             <h2 class="card-title">5  Bubble Tea Creations to Try Today</h2>
             <p class="card-description">Ready to take your bubble tea journey to new heights? We've got just the ticket! Step aside from the usual bubble tea blends, and let's dive into a world of creativity with these five recipes that will redefine your sipping experience...</p>
           </div>
@@ -95,7 +95,7 @@
       <div class="card seventh-news">
         <a href="link" class="card-link">
           <div class="card-body">
-            <img class="card-image" src="https://cdn.discordapp.com/attachments/1023954749499899956/1137710838866772100/mikayla-mallek-3iT3dnmblGE-unsplash.jpg">
+            <img class="card-image" src="https://cdn.discordapp.com/attachments/1023954749499899956/1137710838866772100/mikayla-mallek-3iT3dnmblGE-unsplash.jpg" alt="Girl sitting on the floor in front of a laptop">
             <h2 class="card-title">Crafting an Aesthetic Notion Setup: Organize and Inspire with Style</h2>
             <p class="card-description">Notion, a versatile productivity tool, has garnered a massive following for its flexibility and customization options. From managing projects to organizing personal notes, it has become a go-to platform for individuals seeking a seamless digital workspace. But why settle for an ordinary setup when you can create an aesthetic Notion setup that sparks joy and creativity? Let's dive into the art of crafting a visually pleasing and inspiring Notion workspace that reflects your style and elevates your productivity...</p>
           </div>
