--- a/code/index.html
+++ b/code/index.html
@@ -48,7 +48,7 @@
 
     <div class="grid-item grid-a">
       <h1>ENCHANTMENT UNVEILED</h1>
-      <img class=venice1 src="/code/Venice2.jpg">
+      <img class=venice1 src="Venice2.jpg">
       &nbsp;
       <h2>The Venice Masquerade Festival's Mysterious
         Allure</h2>
