--- a/code/index.html
+++ b/code/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC:wght@700&family=Roboto:wght@100&display=swap"
+  rel="stylesheet">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,46 +42,53 @@
   <!--GRID STARTS HERE-->
   <div class="grid-parent">
 
+    <!--top article fall beauty-->
     <div class="grid-item grid-one">
       <h1>FALL INTO BEAUTY</h1>
-      <p>How To Embrace Autumn's Radiance</p>
+      <p id="header">How To Embrace Autumn's Radiance</p>
       <img class="article-one" src="./images/fallif.jpg" alt="Fall A">
     </div>
 
+    <!--article (sidebar grid) prioritize-->
     <div class="grid-item sidebar">
-      <h9>TO PRIORITIZE THIS AUTUMN</h9>
+      <h9>WHAT YOU SHOULD PRIORITIZE THIS AUTUMN</h9>
       <img class="article-sidebar" src="./images/goal.jpeg" alt="Fall D">
-      <p9> / SLEEP / </p9>
-      <p9> / HEALTH / </p9>
-      <p9> / FRIENDS / </p9>
-      <p9> / FINANCE / </p9>
-      <p9> / TRAVEL / </p9>
-      <p9> / FOOD / </p9>
-      <p9> / FUN / </p9>
+      <p class="prior-autm"> / SLEEP / </p>
+      <p class="prior-autm"> / HEALTH / </p>
+      <p class="prior-autm"> / FRIENDS / </p>
+      <p class="prior-autm"> / FINANCE / </p>
+      <p class="prior-autm"> / TRAVEL / </p>
+      <p class="prior-autm"> / FOOD / </p>
+      <p class="prior-autm"> / FUN / </p>
     </div>
 
+    <!--article gold-->
     <div class="grid-item grid-two">
       <img class="article-two" src="./images/gull.jpg" alt="Fall C">
       <h2>GOLDEN AUTUMN ELEGANCE</h2>
-      <p2>Welcome The Season In Luxurious Gold</p2>
+      <p id="gold">Welcome The Season In Luxurious Gold</p>
     </div>
 
+    <!--autumn recipes-->
     <div class="grid-item grid-four">
-      <p4>ALL THINGS PUMPKIN</p4>
-      <p44>Impress your friends with our simple Pumpkin Soup recipe or invite them over for some Pumpkin Pie and Pumpkin
-        Ppice Latte!</p44>
+      <h4>ALL THINGS PUMPKIN</h4>
+      <p id="pumpkrec">Impress your friends with our simple Pumpkin Soup recipe or invite them over for some Pumpkin Pie
+        and Pumpkin Spice Latte!</p>
     </div>
+
+    <!--autmn recipes pics-->
     <div class="grid-item grid-five">
       <img class="article-pumpk" src="./images/pumpk1.jpg" alt="Fall E">
     </div>
     <div class="grid-item grid-six"><img class="article-pumpk" src="./images/pumpk2.jpg" alt="Fall E"></div>
     <div class="grid-item grid-seven"><img class="article-pumpk" src="./images/pumpk3.jpg" alt="Fall E"></div>
 
+    <!--article decades beauty-->
     <div class="grid-item grid-eight">
       <h8>TIMELESS BEAUTY;</h8>
-      <p8>A LESSON OF BEAUTY TROUGH THE DECADES</p8>
+      <p id="beauty">A LESSON OF BEAUTY TROUGH THE DECADES</p>
       <img class="article-beauty" src="./images/Rebekah W Harkness Jack Mitchell.jpeg" alt="Fall H">
-      <p7>Jack Mitchell//Getty Images</p7>
+      <p id="imgb">Jack Mitchell//Getty Images</p>
     </div>
 
   </div>
