--- a/code/index.html
+++ b/code/index.html
@@ -3,10 +3,9 @@
 
 <head>
   <meta charset="utf-8" />
-  <!-- Change the title below -->
   <title>the Unseen</title>
   <link rel="stylesheet" href="./style.css" />
-  <!-- dont forget the meta tag for responsiveness -->
+  <!-- meta tag for responsiveness -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -135,6 +134,7 @@
   </section>
 
 </body>
+<!--END OF GRID-->
 
 <!--FOOTER-->
 <footer>
