--- a/code/index.html
+++ b/code/index.html
@@ -2,22 +2,86 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <!-- Change the title below -->
-    <title>News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <title>Heads Up</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
+
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <div class="header-logo">
+        <img src="logo.png" alt="SITE LOGO">
+      </div>
+      <div class="header-text">SITE NAME</div>
+      <div class="header-links">
+        <a href="url">LINK</a>
+        <a href="url">LINK</a>
+        <a href="url">LINK</a>
+        <a href="url">LINK</a>
+      </div>
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
+    <section class="body1-parent">
+      <div class="body1-child">
+        <img id="body1-image"src="https://images.pexels.com/photos/2280549/pexels-photo-2280549.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="IMAGE">
+      </div>
+      <div id="body1-text" class="body1-child">
+        <h1>HEADLINE TEXT</h1>
+        <p>
+          SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT 
+          SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT
+          SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT
+          SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT
+          SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT 
+          SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT
+          SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT
+          SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT...
+        </p>
+        <button id="body1-button">SAMPLE BUTTON</button>
+      </div>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="body2-parent">
+      <div class="body2-child">
+        <img class="body2-images" src="https://images.pexels.com/photos/276267/pexels-photo-276267.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="IMAGE1">
+        <h3>TITLE TEXT</h3>
+        <p>SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT...</p>
+      </div>
+      <div class="body2-child">
+        <img class="body2-images" src="https://images.pexels.com/photos/34299/herbs-flavoring-seasoning-cooking.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="IMAGE2">
+        <h3>TITLE TEXT</h3>
+        <p>SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT...</p> 
+      </div>
+      <div class="body2-child">
+        <img class="body2-images" src="https://images.pexels.com/photos/3965543/pexels-photo-3965543.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="IMAGE3">
+        <h3>TITLE TEXT</h3>
+        <p>SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT...</p>
+      </div>
+      <div class="body2-child">
+        <img class="body2-images" src="https://images.pexels.com/photos/3373744/pexels-photo-3373744.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="IMAGE4">
+        <h3>TITLE TEXT</h3>
+        <p>SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT...</p>
+      </div>
+      <div class="body2-child">
+        <img class="body2-images" src="https://images.pexels.com/photos/4033148/pexels-photo-4033148.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="IMAGE5">
+        <h3>TITLE TEXT</h3>
+        <p>SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT...</p>
+      </div>
+      <div class="body2-child">
+        <img class="body2-images" src="https://images.pexels.com/photos/3825541/pexels-photo-3825541.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="IMAGE6">
+        <h3>TITLE TEXT</h3>
+        <p>SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT...</p>
+      </div>
+      <div class="body2-child">
+        <img class="body2-images" src="https://images.pexels.com/photos/7256872/pexels-photo-7256872.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="IMAGE7">
+        <h3>TITLE TEXT</h3>
+        <p>SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT...</p>
+      </div>
+      <div class="body2-child">
+        <img class="body2-images" src="https://images.pexels.com/photos/5063444/pexels-photo-5063444.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="IMAGE8">
+        <h3>TITLE TEXT</h3>
+        <p>SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT...</p>
+      </div>
     </section>
   </body>
 </html>
