--- a/code/index.html
+++ b/code/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="header">
         <div class="logo">
-            <img src="/logo.svg" alt="sport logo">
+            <img src="/code/logo.svg" alt="sport logo">
 
         </div>
         <div class="small-menu">
