--- a/code/index.html
+++ b/code/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="header">
       <div class="logo">
-       <img src="code/images/ARTLOGO-01.png" alt="the Pedestal">
+       <img src="ARTLOGO-01copy.png" alt="the Pedestal">
       </div>
       <input type="checkbox" class="menu-toggle checkbox" id="menu-toggle">
       <div class="menu">
