updated navbar and hamburger menu, 4 columns

--- a/code/index.html
+++ b/code/index.html
@@ -7,6 +7,9 @@
   <!-- Change the title below -->
   <title>Summer in Stockholm for families</title>
   <link rel="stylesheet" style="text/css " href="./style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- dont forget the meta tag for responsiveness -->
 </head>
 
@@ -14,12 +17,25 @@
   <header>
     <!-- Some kind of logo and navbar -->
     <nav>
-      <img src="logo.svg" alt="technigo logo" />
-      <a href="#link_to_travel">Travel</a>
-      <a href="#link_to_Museums">Museums</a>
-      <a href="#link_to_Pools">Pools</a>
-      <a href="#link_to_Playgrounds">Playgrounds</a>
-      <a href="#link_to_4H-Farms">4H-petfarms</a>
+      <div class="nav-logo">
+        <img src="logo.svg" alt="technigo logo" />
+      </div>
+      <div class="nav-links">
+        <a href="#link_to_travel">Travel</a>
+        <a href="#link_to_Museums">Museums</a>
+        <a href="#link_to_Pools">Pools</a>
+        <a href="#link_to_Playgrounds">Playgrounds</a>
+        <a href="#link_to_4H-Farms">4H-petfarms</a>
+      </div>
+      <div class="hamburger">
+        <i class="fa-solid fa-bars"></i>
+        <div class="dropdown-menu">
+          <a href="#link_to_travel">Travel</a>
+          <a href="#link_to_Museums">Museums</a>
+          <a href="#link_to_Pools">Pools</a>
+          <a href="#link_to_Playgrounds">Playgrounds</a>
+          <a href="#link_to_4H-Farms">4H-petfarms</a>
+        </div>
     </nav>
     <div>
       <a id="scroll-top"></a>
