updated version of newssite

--- a/code/index.html
+++ b/code/index.html
@@ -1,79 +1,149 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>EcoSphere News</title>
-    <link rel="stylesheet" href="./style.css" />
+    <title>Ecosphere News</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Vithkuqi:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/CSS" href="./style.css" />
   </head>
-  <body>
-    <section class="header">
-      <nav>
-           <a href="index.html"><img src="./images/logo news site.PNG"></a>
-           <div class="nav-links">
-              <ul>
-                <li><a href=" ">HOME</a></li>
-                <li><a href=" ">ABOUT</a></li>
-                <li><a href=" ">ARTICLES</a></li>
-                <li><a href=" ">CONTACT US</a></li>
-              </ul>
-           </div>
-      </nav>
-    </section>
-
-<!-------main theme------->
-<section class="flex-parent-box1">
-  <div class="flex-box1-child1">
-    <img src="./images/mainpicture1.png" width="500px" height="400px" />
-  </div>
-  <div class="flex-box1-child2">
-    <h1>Latest sustainable news!</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <button>READ MORE</button>
-  </div>
-</section>
-
-<!--------8 squares------>
-<section class="flex-box1-parent2">
   
-  <div class="flex-child sqaure1">
-    <img src="./images/lifeonland.PNG" width="100px" height="100px"/>
-    <span class="caption1">Life on land</span>
-  </div>
-  <div class="flex-child square2">
-    <img src="./images/climateaction.gif" width="100px" height="100px"/>
-    <span class="caption2">Climate action</span>
-  </div>
-  <div class="flex-child square3">
-    <img src="./images/cleanenergy.PNG" width="100px" height="100px"/>
-    <span class="caption3">Clean energy</span>
-  </div>
-  <div class="flex-child square4">
-    <img src="./images/cleanwater.PNG" width="100px" height="100px"/>
-    <span class="caption4">Clean water</span>
-  </div>
-  <div class="flex-child square5">
-    <img src="./images/sustaniblecitiesandcomm.PNG" width="100px" height="100px"/>
-    <span class="caption5">Sustainable cities</span>
-  </div>
-  <div class="flex-child square6">
-    <img src="./images/responsibleconsumption.PNG" width="100px" height="100px"/>
-    <span class="caption6">Responsible consumption</span>
-  </div>
-  <div class="flex-child square7">
-    <img 
-    src="./images/goodhealthwellbeing.PNG" width="100px" height="100px"/>
-    <span class="caption7">Good health</span>
-  </div>
-  <div class="flex-child square8">
-    <img src="./images/lifebelowwater.PNG"width="100px" height="100px"/>
-    <span class="caption8">Life below water</span>
-  </div> 
-</section>
+  <body>
+    <header>
+      <div class="logo">
+        <a href="#">
+          <a href="index.html"><img src="./images/logo news site.PNG"></a>
+        </a>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#Home">HOME</a></li>
+          <li><a href="#About" title="Click here to learn more about us">ABOUT</a></li>
+          <li><a href="#Contact" title="Talk to us!">CONTACT</a></li>
+        </ul>
+      </nav>
+    </header>
+  
+    <main>
+      <section class="big-news">
+        <div class="big-news-image">
+          <a href="#">
+            <img src="./images/mainpicture.jpg" alt="The sustainable goals from UN" class="photo" />
+          </a>
+        </div>
+        <div class="big-news-textbox">
+          <a href="#">
+            <h2><span class="underline-on-hover">Latest sustainable news!</span></h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt ut labore et
+              dolore
+              magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+              commodo
+              consequat.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt ut.</p>
+          <button><span class="underline-on-hover">READ MORE</span></button>
+        </a>
+        </div>
+      </section>
 
+      <section class="other-news">
+        <div class="grid-item news one">
+          <a href="#">
+            <h3>LIFE ON LAND</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore
+              magna aliqua. </p>
+            <img src="./images/theglobalgoals_icons_color_goal_15.png" alt="Life on land"
+              class="photo" />
+          </a>
+        </div>
+  
+        <div class="grid-item news two">
+          <a href="#">
+            <h3>CLIMATE ACTION</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. </p>
+            <img src="./images/theglobalgoals_icons_color_goal_13.png" alt="Climate Action"
+              class="photo" />
+          </a>
+        </div>
+  
+        <div class="grid-item news three">
+          <a href="#">
+            <h3>CLEAN ENERGY</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore
+              magna aliqua. </p>
+            <img src="./images/theglobalgoals_icons_color_goal_7.png" alt="Clean energy"
+              class="photo" />
+          </a>
+        </div>
+  
+        <div class="grid-item news four">
+          <a href="#">
+            <h3>CLEAN WATER</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore
+              magna aliqua. </p>
+            <img src="./images/theglobalgoals_icons_color_goal_6.png" alt="Clean water"
+              class="photo" />
+          </a>
+        </div>
+  
+        <div class="grid-item news five">
+          <a href="#">
+            <h3>SUSTAINABLE CITIES</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore
+              magna aliqua. </p>
+            <img src="./images/theglobalgoals_icons_color_goal_11.png"
+              alt="Sustainable cities" class="photo" />
+          </a>
+        </div>
+  
+        <div class="grid-item news six">
+          <a href="#">
+            <h3>RESPONSIBLE CONSUMPTION</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore
+              magna aliqua. </p>
+            <img src="./images/theglobalgoals_icons_color_goal_12.png" alt="Responsible consumtion"
+              class="photo" />
+          </a>
+        </div>
+  
+        <div class="grid-item news seven">
+          <a href="#">
+            <h3>GOOD HEALTH & WELL BEING</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore
+              magna aliqua. </p>
+            <img src="./images/theglobalgoals_icons_color_goal_3.png" alt="Good health and well being"
+              class="photo" />
+          </a>
+        </div>
+  
+        <div class="grid-item news eight">
+          <a href="#">
+            <h3>LIFE BELOW WATER</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore
+              magna aliqua. </p>
+            <img src="./images/theglobalgoals_icons_color_goal_14.png"
+              alt="Life below water" class="photo" />
+          </a>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <p>TAKE URGENT ACTION TO COMBAT CLIMATE CHANGE AND ITS IMPACTS.</p>
+    </footer>
+  
   </body>
-</html>
+  
+  </html>
