added burger menu icon responsive but not perfect

--- a/code/index.html
+++ b/code/index.html
@@ -22,8 +22,8 @@
       <a class="flex-navbar-child" href="path/to/subpage">Hyena Facts</a>
       <a class="flex-navbar-child" href="path/to/subpage">About Us</a>
       <a class="flex-navbar-child" href="path/to/subpage">Contact</a>
+      <img class="burger-menu" src="burger-menu.svg" alt="burger menu 3 lines" />
     </nav>
-    </div>
   </header>
 
   <section class="grid-parent">
