--- a/code/index.html
+++ b/code/index.html
@@ -20,7 +20,7 @@
   <!-- Header which includes the Navigation menu bar, logo, and burger menu images that will appear for web and tablet -->
   <header class="header">
     <nav class="flex-navbar">
-      <img class="logo" src="logo.svg" alt="info about image goes here" />
+      <img class="logo" src="logo.svg" alt="Technigo logo" />
       <a class="flex-navbar-child" href="path/to/subpage">News</a>
       <a class="flex-navbar-child" href="path/to/subpage">Archive</a>
       <a class="flex-navbar-child" href="path/to/subpage">Tracking</a>
@@ -29,7 +29,8 @@
       <a class="flex-navbar-child" href="path/to/subpage">Contact</a>
     </nav>
     <div class="dropdown">
-      <button class="dropbtn"></button>
+      <button class="dropbtn"> <img class="burger-button" src="burger-button.png"
+          alt="hamburger menu button" /></button>
       <div class="dropdown-content">
         <a href="#">News</a>
         <a href="#">Archive</a>
