cleaned up code

--- a/code/index.html
+++ b/code/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <!-- Header which includes the Navigation menu bar, logo, and burger menu images that will appear for web and tablet -->
+  <!-- Header for desktop and tablet includes the Navigation menu bar and logo -->
   <header class="header">
     <nav class="flex-navbar">
       <img class="logo" src="logo.svg" alt="Technigo logo" />
@@ -28,6 +28,7 @@
       <a class="flex-navbar-child" href="path/to/subpage">About Us</a>
       <a class="flex-navbar-child" href="path/to/subpage">Contact</a>
     </nav>
+    <!-- Header for mobile includes hambruger menu dropdown select and hover effects -->
     <div class="dropdown">
       <button class="dropbtn"> <img class="burger-button" src="burger-button.png"
           alt="hamburger menu button" /></button>
@@ -118,7 +119,9 @@
         <p>Find out the fascinating truth about this supposed scavenger with our spotted</p>
       </div>
     </div>
-    <div class="grid-item last-grid-item"> &#x2022; Fall 2023 Class &#x2022; Pre-Course &#x2022; Beckie Morton &#x2022
+    <!-- Footer  -->
+    <div class="grid-item last-grid-item"> &#x2022; Web Development boot camp 2023 &#x2022; Pre-Course &#x2022; Beckie
+      Morton &#x2022
     </div>
   </section>
 </body>
