correct responsive design

--- a/code/index.html
+++ b/code/index.html
@@ -6,18 +6,19 @@
     <title>Llama news site</title>
     <link rel="stylesheet" href="./style.css" />    
   </head>
-  <body>
-    <nav class="navbar">
-      <h1>🦙Llama News - latest news from around the world</h1> 
-      <ul class="nav-links"> 
-        <div class="menu">  
+  <body>               
+    <div class="nav-container">
+      <nav class="navbar">
+        <h1>🦙Llama News - latest news from around the world</h1> 
+      </nav>
+      <ul class="nav-links">
+        <div class="menu">
           <li><a href="/">Home</a></li>
           <li><a href="/">Archive</a></li>
-          <li><a href="/">Contact</a></li>          
+          <li><a href="/">Contact</a></li>
         </div>
       </ul>
-    </nav>              
-   
+    </div>
     <section class="grid-parent">       
       <div class="grid-item big-grid-item"> 
         <img src="./images/pexels-ilargian-faus-1629781.jpg">              
