--- a/code/index.html
+++ b/code/index.html
@@ -6,13 +6,10 @@
   <!-- Change the title below -->
   <title>Art News</title>
   <link rel="stylesheet" href="./style.css" />
-  <!-- dont forget the meta tag for responsiveness -->
+  <!-- Meta tag for responsiveness -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 </head>
-<!--do this change-->
 
 <body>
   <header class="header">
@@ -42,8 +39,8 @@
 
   <section class="flex-parent">
 
-    <div class="flex-child red">
-      <div class="flex-child redtwo">
+    <div class="flex-child-red">
+      <div class="flex-child-redtwo">
         <h2>What's about all the plastic?</h2>
 
         <div id="text"> Plastic waste in the art sector refers to the practice of using discarded plastic
