Add style, content, images

--- a/index.html
+++ b/index.html
@@ -1,2 +1,56 @@
-<h1>The Daily Wicked</h1>
-<p>Big newz</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <!-- Change the title below -->
+    <title>News Site</title>
+    <link rel="stylesheet" href="./style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
+  <body>
+    <header>  
+        <img class="logo" src="Logo.png" alt="logo with letters ww">
+
+        <h1>The Daily Wicked</h1>
+      <!-- Some kind of logo and navbar -->
+    </header>
+
+    <br> 
+
+    <section class="big-news">
+        <img src="https://picsum.photos/300/200" />
+        <h2>Headline about a the big news</h2>
+    </section>
+
+    <section class="news-number2">
+        <img src="https://picsum.photos/150/100"/>
+        
+        <div>
+        <h4>News number 2</h4>
+        <p>This news is very intresting. You must read it.</p>
+        </div>
+    </section>
+
+    <br> 
+
+    <section class="news-number3">
+        <img src="https://picsum.photos/150/100"/>
+        <div> 
+        <h4>News number 3</h4>
+        <p>This news is very intresting. You must read it.</p>
+        </div>
+    </section>
+        <section class="">
+            <img src="https://picsum.photos/300/200"/>
+            <h6>News number 4</h6>
+        </section>
+            <section class="">
+                <img src="https://picsum.photos/300/200"/>
+                <h6>News number 5</h6>
+            </section>
+                <section class="">
+                    <img src="https://picsum.photos/300/200"/>
+                    <h6>News number 6</h6>
+    </section>
+  </body>
+</html>
