--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 
 <body>
     <header>
-        <img class="logo" src="Logo.png" alt="logo with letters ww">
+        <img class="logo" src="the daily sleep.png"logo with letters zzz">
 
-        <h1>The Daily Wicked</h1>
+        <h1>The Daily Sleep</h1>
         <!-- Some kind of logo and navbar -->
     </header>
 
-    <section class="big-news">
-        <img src="https://picsum.photos/300/200" />
-        <h2>Headline about a the big news</h2>
+    <section class="intro">
+        <img class="intro" src="sleepy header img.png" />
+        
     </section>
 
     <section class="small-news">
-        <img src="https://picsum.photos/150/100" />
+        <img src="grey.webp" />
 
         <div>
             <h4>News number 2</h4>
