add new content, changed design.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
 
     <section class="intro">
-        <img class="intro" src="sleepy header img.png" />
+        <img class="intro" src="laundy 2.jpg" />
         
     </section>
 
@@ -26,32 +26,32 @@
         <img src="grey.webp" />
 
         <div>
-            <h4>News number 2</h4>
-            <p>This news is very intresting. You must read it.</p>
+            <h4>The color grey</h4>
+            <p>Grey is an intermediate color between black and white. It is a neutral or achromatic color, meaning literally that it is "without color”...</p>
         </div>
     </section>
 
     <section class="small-news">
-        <img src="https://picsum.photos/150/100" />
+        <img src="remote control.jpg" />
         <div>
-            <h4>News number 3</h4>
-            <p>This news is very intresting. You must read it.</p>
+            <h4>User manual for a remote control</h4>
+            <p>Caution: Before using a remote control, please read ...</p>
         </div>
     </section>
 
     <section class="small-news">
-        <img src="https://picsum.photos/150/100" />
+        <img src="juice.jpg" />
         <div> 
-            <h4>News number 4</h4>
-            <p>This news is very intresting. You must read it.</p>
+            <h4>The difference between freshly squeezed and cold-pressed juice</h4>
+            
         </div>
     </section>
 
     <section class="small-news">
-        <img src="https://picsum.photos/150/100" />
+        <img src="rose2.jpg" />
         <div> 
-            <h4>News number 5</h4>
-            <p>This news is very intresting. You must read it.</p>
+            <h4>Poem: Rose is a rose.</h4>
+            <p>Rose is a rose is a rose is a rose. Rose is a rose is a rose is a rose. Rose is a rose is a rose is a rose.</p>
         </div>
     </section>
 
