--- a/code/index.html
+++ b/code/index.html
@@ -1,23 +1,60 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+
+<head>
     <meta charset="utf-8" />
     <!-- Change the title below -->
     <title>News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
     <header>
-      <!-- Some kind of logo and navbar -->
+        <img class="logo" src="the daily sleep.png"logo with letters zzz">
+
+        <h1>The Daily Sleep</h1>
+        <!-- Some kind of logo and navbar -->
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
+    <section class="intro">
+        <img class="intro" src="laundy 2.jpg" />
+        
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="small-news">
+        <img src="grey.webp" />
+
+        <div>
+            <h4>The color grey</h4>
+            <p>Grey is an intermediate color between black and white. It is a neutral or achromatic color, meaning literally that it is "without color”...</p>
+        </div>
     </section>
-  </body>
+
+    <section class="small-news">
+        <img src="remote control.jpg" />
+        <div>
+            <h4>User manual for a remote control</h4>
+            <p>Caution: Before using a remote control, please read ...</p>
+        </div>
+    </section>
+
+    <section class="small-news">
+        <img src="juice.jpg" />
+        <div> 
+            <h4>The difference between freshly squeezed and cold-pressed juice</h4>
+            
+        </div>
+    </section>
+
+    <section class="small-news">
+        <img src="rose2.jpg" />
+        <div> 
+            <h4>Poem: Rose is a rose.</h4>
+            <p>Rose is a rose is a rose is a rose. Rose is a rose is a rose is a rose. Rose is a rose is a rose is a rose.</p>
+        </div>
+    </section>
+
+</body>
+
 </html>
