Add style and color.

--- a/code/index.html
+++ b/code/index.html
@@ -14,12 +14,16 @@
         <img class="logo" src="the daily sleep.png"logo with letters zzz">
 
         <h1>The Daily Sleep</h1>
-        <!-- Some kind of logo and navbar -->
+
     </header>
 
     <section class="intro">
-        <img class="intro" src="laundy 2.jpg" />
-        
+        <img class="intro-image" src="laundy 2.jpg" />
+        <div class="intro-text">
+            
+            Short story: Laundry day
+
+        </div>
     </section>
 
     <section class="small-news">
