Change design, add  navigation.

--- a/code/index.html
+++ b/code/index.html
@@ -17,11 +17,19 @@
 
     </header>
 
+    <nav class="links">
+        <ol>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Merch</a></li>
+          <li><a href="#">About</a></li>
+        </ol>
+      </nav>
+
     <section class="intro">
         <img class="intro-image" src="laundy 2.jpg" />
         <div class="intro-text">
-            
-            Short story: Laundry day
+            <h2>Short story: Laundry day</h2>
+            <p>She always did her laundry on mondays. Monday, the first day of the week ... </p>
 
         </div>
     </section>
@@ -30,7 +38,7 @@
         <img src="grey.webp" />
 
         <div>
-            <h4>The color grey</h4>
+            <h2>The color grey</h2>
             <p>Grey is an intermediate color between black and white. It is a neutral or achromatic color, meaning literally that it is "without color”...</p>
         </div>
     </section>
@@ -38,7 +46,7 @@
     <section class="small-news">
         <img src="remote control.jpg" />
         <div>
-            <h4>User manual for a remote control</h4>
+            <h2>User manual for a remote control</h2>
             <p>Caution: Before using a remote control, please read ...</p>
         </div>
     </section>
@@ -46,7 +54,7 @@
     <section class="small-news">
         <img src="juice.jpg" />
         <div> 
-            <h4>The difference between freshly squeezed and cold-pressed juice</h4>
+            <h2>Freshly squeezed and cold-pressed juice – the difference</h2>
             
         </div>
     </section>
@@ -54,8 +62,8 @@
     <section class="small-news">
         <img src="rose2.jpg" />
         <div> 
-            <h4>Poem: Rose is a rose.</h4>
-            <p>Rose is a rose is a rose is a rose. Rose is a rose is a rose is a rose. Rose is a rose is a rose is a rose.</p>
+            <h2>Poem: Rose is a rose.</h2>
+            <p>Rose is a rose is a rose is a rose. Rose is a rose is a rose is a rose. Rose is a rose ...</p>
         </div>
     </section>
 
