--- a/code/index.html
+++ b/code/index.html
@@ -24,6 +24,10 @@
           <li><a href="#">About</a></li>
         </ol>
       </nav>
+<marquee class="sheep">
+    🐑 
+</marquee>
+
 
     <section class="intro">
         <img class="intro-image" src="laundy 2.jpg" />
