Add media quarie

--- a/code/index.html
+++ b/code/index.html
@@ -3,15 +3,14 @@
 
 <head>
     <meta charset="utf-8" />
-    <!-- Change the title below -->
-    <title>News Site</title>
+    <title>The Daily Sleep</The Daily Sleep>
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
     <header>
-        <img class="logo" src="the daily sleep.png"logo with letters zzz">
+        <img class="logo" src="the daily sleep.png" logo with letters zzz">
 
         <h1>The Daily Sleep</h1>
 
@@ -19,14 +18,14 @@
 
     <nav class="links">
         <ol>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Merch</a></li>
-          <li><a href="#">About</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Merch</a></li>
+            <li><a href="#">About</a></li>
         </ol>
-      </nav>
-<marquee class="sheep">
-    🐑 
-</marquee>
+    </nav>
+    <marquee class="sheep">
+        🐑
+    </marquee>
 
 
     <section class="intro">
@@ -43,7 +42,8 @@
 
         <div>
             <h2>The color grey</h2>
-            <p>Grey is an intermediate color between black and white. It is a neutral or achromatic color, meaning literally that it is "without color”...</p>
+            <p>Grey is an intermediate color between black and white. It is a neutral or achromatic color, meaning
+                literally that it is "without color”...</p>
         </div>
     </section>
 
@@ -57,15 +57,15 @@
 
     <section class="small-news">
         <img src="juice.jpg" />
-        <div> 
+        <div>
             <h2>Freshly squeezed and cold-pressed juice – the difference</h2>
-            
+
         </div>
     </section>
 
     <section class="small-news">
         <img src="rose2.jpg" />
-        <div> 
+        <div>
             <h2>Poem: Rose is a rose.</h2>
             <p>Rose is a rose is a rose is a rose. Rose is a rose is a rose is a rose. Rose is a rose ...</p>
         </div>
